--- a/webservices/src/main/resources/application.conf
+++ b/webservices/src/main/resources/application.conf
@@ -4,7 +4,7 @@ akka {
 }
 
 service {
-    host = "localhost"
+    host = "62.28.239.27"
     port = 8080
 }
 
@@ -13,7 +13,7 @@ db {
    port = 3306
    name = "ciafaWebServices"    
    user = "root"        
-   password = null
+   password = "ciafa2015"
 }
 
 ros {
