change webservices dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ sharpeye15_ws/build
 sharpeye15_ws/devel
 webservices/target
 webservices/project/target/
+webservices/project/project/target/
 mapWebApp/target
 mapWebApp/project/target/
 *~
